Time: 470 ms (15.47%), Space: 60.5 MB (5.33%) - LeetHub